# bvglockscreenplugin

./: .gitignore  README.md
.github/workflows/: build.yml
bvg-kindle/: .gitignore  Makefile  README.md  meson.build  meson.options
bvg-kindle/.github/workflows/: build.yml
bvg-kindle/extensions/bvg/: bvg.sh  config.xml  menu.json
bvg-kindle/src/: bvg_api.cpp  bvg_api.h  config.cpp  config.h  display.cpp  display.h  kindle.cpp  kindle.h  main.cpp
bvg-kindle/subprojects/: json-c.wrap
bvglockscreen.koplugin/: _meta.lua  bvg_api.lua  bvg_menu.lua  bvg_utils.lua  display_departures.lua  main.lua
